RG-1103: FIxed. Fix line break in select dropdown
Former-commit-id: 3ba55557702a1526efb3fc8e9c018bbd3965563b

--- a/components/list/list.scss
+++ b/components/list/list.scss
@@ -115,13 +115,13 @@ $list-spacing: $ring-unit / 2;
 
   &__label {
     float: left;
+    padding-right: $ring-unit * 2;
   }
 
   &__description {
     @include ring-ellipsis;
     @include ring-font;
 
-    padding-left: $ring-unit * 2;
     text-align: right;
 
     color: $ring-dark-gray-color;
